# Expense_Tracker

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 5bb07cd6be6f_created_expense_table.py  8d8e84595110_created_auth_mocel.py  b511e993646c_initial.py
src/: __init__.py  config.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  services.py  utils.py
src/db/: main.py  redis.py
src/emails/: send_mails.py
src/emails/templetes/: verify_new_user_email.html
src/expenses/: models.py  routes.py  schemas.py  services.py
