[project]
name = "expense-tracker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
]
